SERVER-21583 applyOperation_inlock builds background indexes in foreground if temp release fails

(cherry picked from commit edc5989d36f6dea86ffe034c414e97e98549004e)